--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="section1">
+    <div class="section1">
      <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -33,8 +33,10 @@
                 <button class="btn2">Request Access</button>
             </div>
         </div>
-        <div class="video-nav">
+        <div class="video-nav"> 
+            <img src="./images/Video.png" alt="">
             <div class="play">
+              <a href="#"> <img  src="./svg/play.svg" alt=""></a> 
             </div>
         </div>
         <div class="bottom-box">
@@ -205,9 +207,13 @@
     <footer>
         <div class="container">
         <div class="footerr">
+            <div class="log2">
         <img src="./images/cp2.png">
+       </div>
+       <div class="para2">
         <p ><u>Get in contact</u> if you have any questions</p>
     </div>
+</div>
 </div>
 </footer>
 </body>
