--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!-- github trial -->
 <body>
     <div class="section1">
+        <div class="sec-1">
      <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -22,6 +23,7 @@
                 <p><u>Get in contact </u>if you have any questions</p>
             </div>
         </div>
+        <div class="trial">
         <div class="main">
             <h1>Capture your next leads</h1>
             <p>This is a lead capture oriented landing page<br> template, hence the name.</p>
@@ -73,12 +75,14 @@
         </div>
      </div>
     </div>
+    </div>
+    </div>
     <div id="section2">
         <div class="container">
         <div class="main-box">
             <div class="lft-box">
                 <h3>THE MAIN FEATURES </h3>
-                <h2>Highlight your main selling<br> points in this section</h2>
+                <h2 class="huh">Highlight your main selling<br> points in this section</h2>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit<br>asperna netsum lorisum fugit, sed quia magni<br> dolores eos qui ratione sequi nesciunt.</p>
                 <div class="lft-btn">
                 <img class="lfti"src="./svg/mail-icon.svg" alt="">
