--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div> 
         <div class="small-box">
             <img src="./images/face.png" alt="">
-             <p>“Nemo enim ipsam voluptatem quia voluptas sit asperna netsum lorisum.”</p>
+             <p>“Nemo enim ipsam voluptatem quia<br> voluptas sit asperna netsum lorisum.”</p>
                 <h3>Sharon V. Collins, Morrison</h3>
             <div class="small-btn">
                 <button class="smll-out">Request Access</button>
