--- a/index.html
+++ b/index.html
@@ -99,20 +99,20 @@
                     </div>
                     </div>
             </div>
-            <div class="rght-box">
+            <div class="rght-box"> 
                 <img class="outer"src="./images/body.png" alt="">
                 <img class="inner"src="./images/mob.png" alt="">
                 <div class="msg-box">
                     <div class="msg1">
                         <div class="msg-div">
-                        <img src="./images/1.png" alt="">
+                        <img class="iim"src="./images/1.png" alt="">
                         <h4>Bob McLaren</h4>
                         </div>
                             <p>Sed ut perspiciatis unde om…</p>
                     </div>
                     <div class="msg2">
                         <div class="msg-div">
-                        <img src="./images/2.png" alt="">
+                        <img class="iim"src="./images/2.png" alt="">
                     
                             <h4>Sam the Unicorn</h4>
                         </div>
@@ -120,22 +120,22 @@
                     </div>
                     <div class="msg3">
                         <div class="msg-div">
-                        <img src="./images/3.png" alt="">
+                        <img class="iim" src="./images/3.png" alt="">
                          <h4>Johnny Dolores</h4>
                         </div>
                          <p>Nam libero tempore, cum sol…</p>
                     </div>
                     <div class="msg4">
                         <div class="msg-div">
-                        <img src="./images/4.png" alt="">
+                        <img class="iim" src="./images/4.png" alt="">
                          <h4>Fox</h4>
                         </div>
                          <p>Nostrum exercitatio nem do…</p>
                     </div>
                     <div class="msg5">
                         <div class="msg-div">
-                        <img src="./images/5.png" alt="">
-                    
+                        <img class="iim"src="./images/5.png" alt="">
+
                        <p>Nemo enim ipsam<br> voluptatem quia voluptas sit<br> aspernatur aut odit aut fugit,<br> sed quia consequuntur<br> magni dolores eos qui<br> ratione voluptatem sequi…</p>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                     <img class="boxi" src="./svg/11.svg">
                     <div class="box-txtt">
                         <h2>Stand out with great style</h2>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit asperna netsum lorisum fugit, sed quia magni.</p>
+                        <p>Nemo enim ipsam voluptatem quia<br>voluptas sit asperna netsum lorisum<br> fugit, sed quia magni.</p>
 
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                     <img class="boxi" src="./svg/22.svg">
                     <div class="box-txtt">
                         <h2>Convert visitors into leads</h2>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit asperna netsum lorisum fugit, sed quia magni.</p>
+                        <p>Nemo enim ipsam voluptatem quia<br> voluptas sit asperna netsum lorisum<br> fugit, sed quia magni.</p>
 
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     <img class="boxi" src="./svg/33.svg">
                     <div class="box-txtt">
                         <h2>Easy to customise</h2>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit asperna netsum lorisum fugit, sed quia magni.</p>
+                        <p>Nemo enim ipsam voluptatem quia <br>voluptas sit asperna netsum lorisum <br>fugit, sed quia magni.</p>
 
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                     <img class="boxi" src="./svg/44.svg">
                     <div class="box-txtt">
                         <h2>Create and test variations</h2>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit asperna netsum lorisum fugit, sed quia magni.</p>
+                        <p>Nemo enim ipsam voluptatem quia <br>voluptas sit asperna netsum lorisum <br>fugit, sed quia magni.</p>
 
                     </div>
                 </div>
